# blender_typst_importer

./: .gitignore  CHANGELOG.md  README.md  build.py  c_simple_svg.ipynb  codeblock_debug.ipynb  debugging.ipynb  debugging_ref.ipynb  example_animation_file.blend  examples.ipynb  f2.ipynb  fixing_code.ipynb  for_development.md  for_thumbnail.ipynb  forumla.ipynb  generate_svgs.ipynb  hello2.ipynb  ideas.md  pyproject.toml  step1.typ  stressstes_svgs.ipynb  stresstest.ipynb
.claude/skills/: increment-version-and-tag
.github/workflows/: build.yml  release.yml  tests.yml  upload_to_extension.yml
docs/: code.txt  color_eq.txt  fibo.txt  for_thumbnail.ipynb  long_text.txt  matrix.txt  plot.txt
notebooks/: tyst_notebook.ipynb
tests/: debugging.ipynb  generate_svgs.ipynb  python.py  run.py  stresstest.ipynb  test_core_workflows_blender52.py  test_grease_pencil_blender52.py  test_svg_images_blender52.py
typst_importer/: __init__.py  addon.py  blender_assets.blend  blender_assets_working.blend  blender_manifest.toml  csv.py  curve_utils.py  image_import.py  node_groups.py  notebook_utils.py  ops.py  parsers.py  props.py  svg_preprocessing.py  typst.py  typst_to_svg.py  ui.py  utils.py
typst_importer/ASSET_DIR/: curve_reveal.blend  curve_reveal_backup.blend
typst_importer/operators/: __init__.py  alignment.py  collections.py  curve_reveal.py  export_svg.py  fade.py  imports.py  jump.py  op_utils.py  path.py  text_editor_import.py  textbox_import.py  utility.py  visibility.py
